--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,1 @@
-services:
-  - type: web
-    name: chaos-api
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app:app --host 0.0.0.0 --port 10000
+# Placeholder content for render.yaml
