--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
   - type: web
     name: chaos-api
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn app:app --host 0.0.0.0 --port 10000"
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
